sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
def bubbleSort(liste:List[Char]):List[Char]  {
^AlgBubbleSort1:2: error: expected class or object definition
def bubbleSort(liste:List[Char]):List[Char]  {
^