sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(liste:List[Char]):List[Char]  {
  do{
  	for(i <- 0 to len-2){
    	if(isSmaller(getvalue(i+1),getvalue(i)){
        swap(i,i+1)
      }
  	}
	}
  while(isSmaller)